bk_ida/gccida/c2/check_insn_for_givs
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_insn_for_givs/src/loop.c:5768:4: error: expected ';' after expression
rtx v11; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_insn_for_givs/src/loop.c:5768:5: error: use of undeclared identifier 'v11'
rtx v11; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_insn_for_givs/src/loop.c:5784:1: error: use of undeclared identifier 'induction_1'
induction_1 *v28; // rbx 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_insn_for_givs/src/loop.c:5784:14: error: use of undeclared identifier 'v28'
induction_1 *v28; // rbx 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_insn_for_givs/src/loop.c:5787:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_insn_for_givs/src/loop.c:5787:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_insn_for_givs/src/loop.c:5790:1: error: use of undeclared identifier 'induction_1'
induction_1 *v34; // rsi 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_insn_for_givs/src/loop.c:5790:14: error: use of undeclared identifier 'v34'
induction_1 *v34; // rsi 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_insn_for_givs/src/loop.c:5793:4: error: expected ';' after expression
rtx add_val; // [rsp+10h] [rbp-68h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_insn_for_givs/src/loop.c:5793:5: error: use of undeclared identifier 'add_val'
rtx add_val; // [rsp+10h] [rbp-68h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_insn_for_givs/src/loop.c:5794:4: error: expected ';' after expression
rtx v38; // [rsp+18h] [rbp-60h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_insn_for_givs/src/loop.c:5794:5: error: use of undeclared identifier 'v38'
rtx v38; // [rsp+18h] [rbp-60h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_insn_for_givs/src/loop.c:5795:4: error: expected ';' after expression
rtx v39; // [rsp+20h] [rbp-58h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_insn_for_givs/src/loop.c:5795:5: error: use of undeclared identifier 'v39'
rtx v39; // [rsp+20h] [rbp-58h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_insn_for_givs/src/loop.c:5796:4: error: expected ';' after expression
rtx ext_val; // [rsp+28h] [rbp-50h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_insn_for_givs/src/loop.c:5796:5: error: use of undeclared identifier 'ext_val'
rtx ext_val; // [rsp+28h] [rbp-50h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_insn_for_givs/src/loop.c:5798:4: error: expected ';' after expression
rtx v42; // [rsp+38h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_insn_for_givs/src/loop.c:5798:5: error: use of undeclared identifier 'v42'
rtx v42; // [rsp+38h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_insn_for_givs/src/loop.c:5799:4: error: expected ';' after expression
rtx last_consec_insn; // [rsp+40h] [rbp-38h] BYREF 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/check_insn_for_givs/src/obj/loop.o] Error 1
